--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "commons-rs"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["niuchangqing <ncq1993@188.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "工具"
 
 [dependencies]
